--- a/index.html
+++ b/index.html
@@ -7793,6 +7793,7 @@
 	<script src="script.js"></script>
 	<script src="formJs.js"></script>
 	<script src="angry-cart.min.js"></script>
+	<script src="lazysizes.min.js" async></script>
 	<script>
 
 		let cart = new AngryCart({
